# tickertape

./: .env.example  .gitignore  DEEP_INTELLIGENCE_PLAYBOOK.md  ENHANCEMENTS_SUMMARY.md  README.md  SIMPLE_USAGE.md  main.py  pyproject.toml  researcher.py  trace_demo.py  view_db.py
backend/: README.md  api.py  platform_service.py  progress_tracker.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/monitor/: page.tsx
frontend/app/onboard/: page.tsx
frontend/app/signals/[ticker]/: page.tsx
frontend/components/: CustomerTicker.tsx  ProgressDisplay.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: api.ts  types.ts  utils.ts
